# Lightning

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lightning.sln  Lightning.vcxproj  Lightning.vcxproj.filters  Readme.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Lightning/: Lightning.vcxproj  Lightning.vcxproj.filters  main.cpp
Lightning/compile/: display.ini
Lightning/config/: display.ini
Lightning/core/: iniTable.cpp  iniTable.h
Lightning/core/context/: WindowContext.cpp
Lightning/core/fio/: Hierarchy.cpp  Hierarchy.h  SourcedStream.cpp  SourcedStream.h  limitedFileBuf.cpp  limitedFileBuf.h
Lightning/core/fio/sources/: BasicFile.cpp  BasicFile.h  IFileSource.h  Package.cpp  Package.h
Lightning/core/task/: ContextTask.h  TaskList.cpp  TaskList.h
Lightning/headers/: Mesh.hpp  Model.hpp  Shader.hpp  WindowContext.hpp  camera.hpp  lightning.hpp
Lightning/headers/file/: AssimpIO.hpp  BasicFile.hpp  IFileSource.hpp  Package.hpp
Lightning/headers/manager/: ContextResourceManager.hpp  FileManager.hpp  ResourceManager.hpp
Lightning/headers/resource/: AssimpModel.hpp  BaseResource.hpp  Image.hpp  Model.hpp  ResourceHandle.hpp  ResourceNode.hpp  ResourceTree.hpp  iniTable.hpp
Lightning/headers/resource/context/: BaseContextResource.hpp  ContextMesh.hpp  ContextModel.hpp  Material.hpp  Mesh.hpp  Texture.hpp
Lightning/headers/task/: BasicTask.hpp  ContextTask.hpp  TaskList.hpp
Lightning/manager/: FileManager.cpp  FileManager.h  ResourceManager.h
Lightning/resource/: BaseResource.h  IntermediaryResourceHandle.h  ResourceHandle.h  ResourceTree.h  iniTable.cpp  iniTable.h
Lightning/sources/: WindowContext.cpp  main.cpp
Lightning/sources/core/fio/: SourcedStream.cpp  limitedFileBuf.cpp
Lightning/sources/core/fio/sources/: BasicFile.cpp
Lightning/sources/core/task/: TaskList.cpp
Lightning/sources/file/: AssimpIO.cpp  BasicFile.cpp  Package.cpp  SourcedStream.cpp  limitedFileBuf.cpp
Lightning/sources/manager/: FileManager.cpp
Lightning/sources/resource/: AssimpModel.cpp  iniTable.cpp
Lightning/sources/resource/context/: AssimpModel.cpp  ContextMesh.cpp  ContextModel.cpp  Mesh.cpp
Lightning/sources/task/: TaskList.cpp
content/config/: backup.txt  display.ini
